wait no when did this become a registration rework again